# VRWebTrack

./: .gitignore  Camera.c  FreeTrack.csproj  LICENSE.md  Monitor.c  Program.cs  README.md  TODO.md  meson.build  test
docs/: build.sh  main.tex  note.tex
docs/chapters/: demo.tex
include/: camera.h  network.h
src/: camera.c  camera_core.c  monitor.c
src/camera/: camera_core.c  camera_linux.c  camera_main.c  camera_windows.c
src/monitor/: monitor.c
src/vulkan/: vulkanmanager.c
tests/: test_camera_linux.c
